# Ghost-intheShell

./: .gitignore  ADVANCED_SECURITY.md  CHANGELOG.md  Cargo.toml  PARANOID_MODE.md  README.md  SECURITY_AUDIT.md  test.sh
src/: clipboard.rs  main.rs  security.rs
