[package]
name = "ghost-shell"
version = "0.3.1"
edition = "2021"

[dependencies]
# Terminal & Input Handling (Raw Mode is critical)
crossterm = "0.27"

# Security & Cryptography
zeroize = { version = "1.7", features = ["derive"] } # Memory scrubbing
chacha20poly1305 = "0.10" # Encryption for clipboard
rand = "0.8" # Secure randomness for keys
base64 = "0.22" # Encoding encrypted data

# System Interaction
arboard = "3.6.1" # Clipboard access
libc = "0.2" # For mlock, madvise, etc.

# Linux Specifics (For process masking)
[target.'cfg(target_os = "linux")'.dependencies]
prctl = "1.0"
nix = { version = "0.29", features = ["process", "signal"] } # Process detection
